ido-tth/main/default/objects/Recommendation/fields/tth_Address__c.field-meta.xml
<CustomField>
    <fullName>tth_Address__c</fullName>
    <description>For events, places, restaurant recommendations</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>