ido-tth/main/default/objects/Recommendation/fields/tth_Location__c.field-meta.xml
<CustomField>
    <fullName>tth_Location__c</fullName>
    <description>What city/Airport code/Country does this recommendation apply to?</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>