ido-tth/main/default/objects/Recommendation/fields/tth_Nature_of_Trip__c.field-meta.xml
<CustomField>
    <fullName>tth_Nature_of_Trip__c</fullName>
    <label>Nature of Trip</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Trip_Purpose</valueSetName>
    </valueSet>
</CustomField>