ido-tth/main/default/objects/Recommendation/fields/tth_Travel_Activities__c.field-meta.xml
<CustomField>
    <fullName>tth_Travel_Activities__c</fullName>
    <label>Travel Activities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Trip_Activities</valueSetName>
    </valueSet>
</CustomField>