ido-tth/main/default/objects/Recommendation/fields/tth_Travel_Budget__c.field-meta.xml
<CustomField>
    <fullName>tth_Travel_Budget__c</fullName>
    <label>Travel Budget</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Trip_Budget</valueSetName>
    </valueSet>
</CustomField>