ido-tth/main/default/objects/Recommendation/fields/tth_Travel_Geography__c.field-meta.xml
<CustomField>
    <fullName>tth_Travel_Geography__c</fullName>
    <label>Travel Geography</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Trip_Geography</valueSetName>
    </valueSet>
</CustomField>