ido-tth/main/default/objects/Recommendation/fields/tth_Travel_Level__c.field-meta.xml
<CustomField>
    <fullName>tth_Travel_Level__c</fullName>
    <description>Determine whether the suggestion is at the trip or booking level</description>
    <label>Travel Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Suggestion_Level</valueSetName>
    </valueSet>
</CustomField>