ido-tth/main/default/objects/Recommendation/fields/tth_Travel_Location__c.field-meta.xml
<CustomField>
    <fullName>tth_Travel_Location__c</fullName>
    <description>What destinations is this recommendation for?</description>
    <label>Travel Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>