ido-tth/main/default/objects/Recommendation/fields/tth_Travel_Vibe__c.field-meta.xml
<CustomField>
    <fullName>tth_Travel_Vibe__c</fullName>
    <label>Travel Vibe</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Trip_Vibe</valueSetName>
    </valueSet>
</CustomField>