ido-tth/main/default/objects/Recommendation/fields/tth_Travel_Weather__c.field-meta.xml
<CustomField>
    <fullName>tth_Travel_Weather__c</fullName>
    <label>Travel Weather</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Trip_Weather</valueSetName>
    </valueSet>
</CustomField>