ido-tth/main/default/objects/Recommendation/fields/tth_Trip_Stage__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip_Stage__c</fullName>
    <description>Represents the current traveler&#39;s trip stage. It is a text field b/c NBA does not support multiselect picklists so if it applies to multiple recommendations, use a comma separated list and ensure Strategy filters leverage the CONTAINS formula function</description>
    <label>Trip Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>