ido-tth/main/default/objects/Recommendation/fields/tth_Trip_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip_Sub_Stage__c</fullName>
    <description>This is currently a text field because multi select picklists are supported yet by NBA Strategy Builder</description>
    <label>Trip Sub Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>